fixed the alignment of text and toggle bar

--- a/src/app/shared/components/template/components/toggle-bar/toggle-bar.scss
+++ b/src/app/shared/components/template/components/toggle-bar/toggle-bar.scss
@@ -34,10 +34,13 @@ ion-toggle {
   position: relative;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 .label {
   margin-left: var(--small-margin);
   margin-right: var(--small-margin);
+  text-align: right;
+  line-height: 27px;
 }
 .center {
   justify-content: center;
@@ -47,11 +50,13 @@ ion-toggle {
   right: 0;
   max-width: calc(50% - 45px);
 }
-.right {
-  justify-content: flex-end;
-}
 .right .label {
   order: 1;
+  text-align: left;
+}
+.toggle_wrapper {
+  align-self: baseline;
+  margin-top: 5px;
 }
 .right .toggle_wrapper {
   order: 2;
